# p2p-display

./: .gitignore  README.md  digital-fax.service
display/: .gitignore  Makefile  readme.md  sh1106.c  sh1106.h  toDisplay.c  toDisplay.h
display/examples/: EPD_4in2_test.c  EPD_Test.h  ImageData.c  ImageData.h  toDisplay.c
docs/: e_ink.md  mesh_setup.md  notes.md  raspberry-pi_setup.md
docs/ideas/: 01_digital-fax.md  02_p2p-file-sharing.md
docs/presentations/2022-05-30_Alpha/: main.tex
docs/report/: main.tex  management.tex  network.tex
docs/report/assets/: network_layer.rs
management/: Cargo.toml  build.rs
management/.cargo/: config.toml
management/src/: bin.rs  control_message.proto  dht.rs  lib.rs  management.rs  protocol.rs  upgrade.rs
p2p-network/: Cargo.toml
p2p-network/src/: lib.rs  lite_network.rs  main.rs  network.rs  protocol.rs
scripts/: batman.sh  build.sh  setup.sh
web/: README.md  package-lock.json  package.json
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
