[package]
name = "management"
version = "0.1.0"
edition = "2021"

[lib]
name = "management"
path = "src/lib.rs"

[[bin]]
name = "management"
path = "src/bin.rs"

[features]

display = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"]}
prost = "0.10"
base64 = "0.13.0"
futures = "0.3.21"
futures-timer = "3.0.2" 
p2p-network = { version = "0.1.0", path = "../p2p-network"}


[build-dependencies]
prost-build = { version = "0.10" }
cc = "1.0"
